--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav button{
     margin-left:10 px;
     cursor:pointer;
 }  
-.language-btn{
+.language-button{
     display: inline-flex;
     align-items: center;
     background: transparent;
@@ -49,7 +49,7 @@ nav button{
 
 
 }
-.language-btn img{
+.language-button img{
     width: 10px;
     margin-left: 10px;
 
@@ -149,12 +149,53 @@ font-size: 18px;
     font-size: 40px;
 }
 .accordion{
-    margin: 60px auto;
-    width: 100%;
-    max-width: 750px;
+    margin: 60px auto ;
+width: 100%;
+max-width: 750px;
+}
+.accordion li{
+    list-style: none;
+    width:100%;
+    padding: 5px;
+}
+.accordion li label{
+display: flex;
+align-items: center;
+padding:20px;
+font-size: 18px;
+font-weight: 500;
+background: #303030;
+margin-bottom: 2px;
+cursor: pointer;
+position: relative;
 
 }
-.accordion-item{
-    list-style: none;
-    width: 100%;
+label::after{
+    content: '+';
+    font-size: 34px;
+    position: absolute;
+    right: 20px;
+    transition: transform 0.5s;
+
+}
+input[type="radio"]{
+    display: none;
+
+}
+
+.accordion .content{
+    background: #303030;
+    text-align: left;
+    padding: 0 20px;
+    max-height:0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+.accordion input[type="radio"]:checked + label + .content{
+    max-height: 600px;
+    padding: 30px 20px;
+
+}
+.accordion input[type="radio"]:checked + label::after{
+    transform: rotate(135deg);
 }
